[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playerdata-uuid-migrator"
version = "0.1.0"
description = "Migrate Minecraft Java playerdata from one UUID to another."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "OpenAI Assistant"}
]
dependencies = [
  "nbtlib==1.12.1"
]
keywords = ["minecraft", "nbt", "playerdata", "uuid", "migration"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities"
]

[project.scripts]
playerdata-uuid-migrator = "playerdata_uuid_migrator.cli:main"

[tool.setuptools.packages.find]
include = ["playerdata_uuid_migrator*"]
